podspawner.yml
# This file contains the deployment configuration for OAuth2 Proxy.
# It includes the necessary environment variables and secret references.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-spawner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-spawner
  template:
    metadata:
      labels:
        app: pod-spawner
    spec:
      containers:
        - name: pod-spawner
          image: <ECR_REPO_URL>
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-spawner
spec:
  selector:
    app: pod-spawner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
