DeployIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://<YOUR_DOMAIN>/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://<YOUR_DOMAIN>/oauth2/start"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: <YOUR_DOMAIN>
      http:
        paths:
          - path: /oauth2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
          - path: /lab(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pod-spawner
                port:
                  number: 80
